Fix overflow on JP editor

--- a/app/assets/stylesheets/modules/_jp_collection.sass
+++ b/app/assets/stylesheets/modules/_jp_collection.sass
@@ -102,11 +102,9 @@
 
   .table-2entries
     .t2e-item-list
-      & > div
-        overflow: visible
       .td
         overflow: hidden
-        
+
       .t2e-item
         position: relative
 
